@@ -91,6 +91,10 @@ int save_title_list(struct dat *dat)
 
 	/* --- User only wants the titles so don't report other details that are not saved! --- */
 
+	dat->emulator_saved=0xff;
+	dat->header_saved=0xffff;
+	dat->clrmamepro_saved=0xff;
+	dat->romcenter_saved=0xffff;
 	dat->game_saved=0xffff;
 	dat->biosset_saved=0xff;
 	dat->rom_saved=0xffff;
